# ImageViewer

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: image-viewer.mdc
docs/: folder_structure.md  project_structure.md  testing.md  translate_json_spec.md
docs/feature/: feature_add_image_pattern.txt
docs/feaure/: add_model_info.md  add_translate_json.md  add_translate_json_animal.md  add_translate_json_background.md  add_translate_json_base.md  add_translate_json_monster.md  add_translate_json_vehicle.md  image_pattern_add_2.md
feature/: composer_sample.txt  feature_add_image_pattern.txt  feature_url_refine.txt  imagte_pattern_add.md  todo.txt
imageviewer/: .gitignore  __init__.py  app.py  run_tests.py  sitemap.xml
imageviewer/config/: config_utils.py  image_pattern_config.json  model_credit_config.json
imageviewer/static/: images  prompts
imageviewer/static/css/: customize.css  customize.scss  style.css
imageviewer/static/js/: main.js  util.js
imageviewer/static/translate_json/: Accesarry.json  Accessory.json  Action.json  Additional Elements_not_use.json  Angle_not_use.json  Appearance.json  Architectural Features.json  Architectural Features_not_use.json  Architecture Style.json  Art Style.json  Atmospheric Effects.json  Atmospheric Effects_not_use.json  Cloth.json  (+87 more)
imageviewer/templates/: base.html  bootstrap.html  images.html  index.html  not_found.html  sitemap.xml  subfolder_images.html  subfolders.html  test_display_order.html  user_policy.html
imageviewer/tests/: test_app.py  test_config.py  test_config_utils.py  test_display_order.py
(+11 files in other folders)
