[tool.poetry]
name = "imageviewer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
jinja2 = "^3.1.2"
flask-caching = "^2.1.0"

[tool.poetry.scripts]
my-script = "imageviewer:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
